# mtci-iasa

./: .gitignore  pyproject.toml
.dvc/: config
checkpoints/: .gitignore  lab1.pth.dvc  lab2.pth.dvc  lab3.pth.dvc  lab4.pth.dvc
notebooks/: genetic.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
notebooks/genetic/: boston.ipynb  turbines.ipynb
src/config/: model_config.py  train_config.py
src/config/train_configs/: lab1.yaml  lab2.yaml  lab3.yaml  lab4.yaml
src/models/: base.py  mlp.py
src/models/activations/: __init__.py  base.py  relu.py
src/models/layers/: __init__.py  base.py  linear.py
src/models/losses/: __init__.py  base.py  mse.py
src/optimizers/: __init__.py  base.py  conjugated.py  genetic.py
src/optimizers/genetic/: __init__.py  individual.py  operators.py  optimizer.py  population.py
src/trainers/: __init__.py  base.py  conjugated.py  gd.py  genetic.py
src/utils/: __init__.py  dataset.py  utils.py
src/utils/datasets/: __init__.py  time_series_dataset.py
