[tool.poetry]
name = "mtci"
version = "0.1.0"
description = "Computational Intelligence"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
tqdm = "4.66.5"
numpy = "1.24.2"
pandas = "1.5.2"
scikit-learn = "1.1.3"
plotly = "5.17.0"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
